add redis and cache
